# image-processing

./: CMakeLists.txt
inc/: opcje.h  przetwarzanie.h
src/: main.c  opcje.c  przetwarzanie.c
